Fixed footer alignment.

--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -19,6 +19,7 @@ footer {
     color: #FFF;
     margin-top: 20px;
     padding: 20px;
+    text-align: right;
 }
 
 #title {
